# dmenumerate

./: CMakeLists.txt  README.md
include/: dmenumerate.h  dmenumerate_config.h  dmenumerate_config.h.in  enumerate.hpp
src/dmenumerate_module/: dmenumerate_module.cpp  dmenumerate_module.def  dmenumerate_module.h
test/dmenumeratetest/: dmenumeratetest.cpp  enumerate.test.cpp
test/traitstest/: traits.test.cpp
